--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10275,12 +10275,15 @@ textarea.form-control-lg {
 /*
     DEMO STYLE
 */
+body {
+  color: #999;
+}
+
 p {
   font-family: "Poppins", sans-serif;
   font-size: 1.1em;
   font-weight: 300;
   line-height: 1.7em;
-  color: #999;
 }
 
 a,
@@ -10436,4 +10439,17 @@ a.download {
   height: 100px;
   background-color: aqua;
   overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+}
+
+#client-home {
+  width: 15rem;
+  margin: 10px;
+  border-radius: 2%;
+}
+#client-home:hover {
+  transition: all 0.3s ease-out;
+  background: #47748b;
+  background-color: #6c757d;
+  color: #47748b;
+  cursor: pointer;
 }
