--- a/resources/sass/app.css
+++ b/resources/sass/app.css
@@ -31,7 +31,7 @@
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
   --bs-primary: #47748b;
-  --bs-secondary: #6c757d;
+  --bs-secondary: #47748b;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
   --bs-warning: #ffc107;
@@ -39,7 +39,7 @@
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
   --bs-primary-rgb: 71, 116, 139;
-  --bs-secondary-rgb: 108, 117, 125;
+  --bs-secondary-rgb: 71, 116, 139;
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
   --bs-warning-rgb: 255, 193, 7;
@@ -1808,15 +1808,15 @@ progress {
 }
 
 .table-secondary {
-  --bs-table-bg: #e2e3e5;
-  --bs-table-striped-bg: #d7d8da;
+  --bs-table-bg: #dae3e8;
+  --bs-table-striped-bg: #cfd8dc;
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #cbccce;
+  --bs-table-active-bg: #c4ccd1;
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #d1d2d4;
+  --bs-table-hover-bg: #cad2d7;
   --bs-table-hover-color: #000;
   color: #000;
-  border-color: #cbccce;
+  border-color: #c4ccd1;
 }
 
 .table-success {
@@ -2740,32 +2740,32 @@ textarea.form-control-lg {
 
 .btn-secondary {
   color: #fff;
-  background-color: #6c757d;
-  border-color: #6c757d;
+  background-color: #47748b;
+  border-color: #47748b;
 }
 .btn-secondary:hover {
   color: #fff;
-  background-color: #5c636a;
-  border-color: #565e64;
+  background-color: #3c6376;
+  border-color: #395d6f;
 }
 .btn-check:focus + .btn-secondary, .btn-secondary:focus {
   color: #fff;
-  background-color: #5c636a;
-  border-color: #565e64;
-  box-shadow: 0 0 0 0.25rem rgba(130, 138, 145, 0.5);
+  background-color: #3c6376;
+  border-color: #395d6f;
+  box-shadow: 0 0 0 0.25rem rgba(99, 137, 156, 0.5);
 }
 .btn-check:checked + .btn-secondary, .btn-check:active + .btn-secondary, .btn-secondary:active, .btn-secondary.active, .show > .btn-secondary.dropdown-toggle {
   color: #fff;
-  background-color: #565e64;
-  border-color: #51585e;
+  background-color: #395d6f;
+  border-color: #355768;
 }
 .btn-check:checked + .btn-secondary:focus, .btn-check:active + .btn-secondary:focus, .btn-secondary:active:focus, .btn-secondary.active:focus, .show > .btn-secondary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.25rem rgba(130, 138, 145, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(99, 137, 156, 0.5);
 }
 .btn-secondary:disabled, .btn-secondary.disabled {
   color: #fff;
-  background-color: #6c757d;
-  border-color: #6c757d;
+  background-color: #47748b;
+  border-color: #47748b;
 }
 
 .btn-success {
@@ -2974,27 +2974,27 @@ textarea.form-control-lg {
 }
 
 .btn-outline-secondary {
-  color: #6c757d;
-  border-color: #6c757d;
+  color: #47748b;
+  border-color: #47748b;
 }
 .btn-outline-secondary:hover {
   color: #fff;
-  background-color: #6c757d;
-  border-color: #6c757d;
+  background-color: #47748b;
+  border-color: #47748b;
 }
 .btn-check:focus + .btn-outline-secondary, .btn-outline-secondary:focus {
-  box-shadow: 0 0 0 0.25rem rgba(108, 117, 125, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(71, 116, 139, 0.5);
 }
 .btn-check:checked + .btn-outline-secondary, .btn-check:active + .btn-outline-secondary, .btn-outline-secondary:active, .btn-outline-secondary.active, .btn-outline-secondary.dropdown-toggle.show {
   color: #fff;
-  background-color: #6c757d;
-  border-color: #6c757d;
+  background-color: #47748b;
+  border-color: #47748b;
 }
 .btn-check:checked + .btn-outline-secondary:focus, .btn-check:active + .btn-outline-secondary:focus, .btn-outline-secondary:active:focus, .btn-outline-secondary.active:focus, .btn-outline-secondary.dropdown-toggle.show:focus {
-  box-shadow: 0 0 0 0.25rem rgba(108, 117, 125, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(71, 116, 139, 0.5);
 }
 .btn-outline-secondary:disabled, .btn-outline-secondary.disabled {
-  color: #6c757d;
+  color: #47748b;
   background-color: transparent;
 }
 
@@ -4620,12 +4620,12 @@ textarea.form-control-lg {
 }
 
 .alert-secondary {
-  color: #41464b;
-  background-color: #e2e3e5;
-  border-color: #d3d6d8;
+  color: #2b4653;
+  background-color: #dae3e8;
+  border-color: #c8d5dc;
 }
 .alert-secondary .alert-link {
-  color: #34383c;
+  color: #223842;
 }
 
 .alert-success {
@@ -4964,17 +4964,17 @@ textarea.form-control-lg {
 }
 
 .list-group-item-secondary {
-  color: #41464b;
-  background-color: #e2e3e5;
+  color: #2b4653;
+  background-color: #dae3e8;
 }
 .list-group-item-secondary.list-group-item-action:hover, .list-group-item-secondary.list-group-item-action:focus {
-  color: #41464b;
-  background-color: #cbccce;
+  color: #2b4653;
+  background-color: #c4ccd1;
 }
 .list-group-item-secondary.list-group-item-action.active {
   color: #fff;
-  background-color: #41464b;
-  border-color: #41464b;
+  background-color: #2b4653;
+  border-color: #2b4653;
 }
 
 .list-group-item-success {
@@ -6065,10 +6065,10 @@ textarea.form-control-lg {
 }
 
 .link-secondary {
-  color: #6c757d;
+  color: #47748b;
 }
 .link-secondary:hover, .link-secondary:focus {
-  color: #565e64;
+  color: #395d6f;
 }
 
 .link-success {
@@ -6508,7 +6508,7 @@ textarea.form-control-lg {
 }
 
 .border-secondary {
-  border-color: #6c757d !important;
+  border-color: #47748b !important;
 }
 
 .border-success {
@@ -10112,12 +10112,15 @@ textarea.form-control-lg {
 /*
     DEMO STYLE
 */
+body {
+  color: #999;
+}
+
 p {
   font-family: "Poppins", sans-serif;
   font-size: 1.1em;
   font-weight: 300;
   line-height: 1.7em;
-  color: #999;
 }
 
 a,
@@ -10129,7 +10132,6 @@ a:focus {
 }
 
 .navbar {
-  padding: 15px 10px;
   background: var(#47748b);
   border: none;
   border-radius: 0;
@@ -10273,6 +10275,19 @@ a.download {
   height: 100px;
   background-color: aqua;
   overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+}
+
+#client-home {
+  width: 15rem;
+  margin: 10px;
+  border-radius: 2%;
+}
+#client-home:hover {
+  transition: all 0.3s ease-out;
+  background: #47748b;
+  background-color: #47748b;
+  color: #47748b;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=app.css.map */
