--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,4 +7,5 @@
 // Bootstrap
 @import "../../node_modules/bootstrap/scss/bootstrap";
 @import 'drawer/drawer';
+@import 'client_home_page/home_page';
 
