--- a/resources/sass/drawer/drawer.scss
+++ b/resources/sass/drawer/drawer.scss
@@ -5,14 +5,14 @@
 @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
 
 body{
-    // background: $body-bg;
+    color: #999;
+
 }
 p {
     font-family: 'Poppins', sans-serif;
     font-size: 1.1em;
     font-weight: 300;
     line-height: 1.7em;
-    color: #999;
 }
 
 a,
@@ -24,7 +24,7 @@ a:focus {
 }
 
 .navbar {
-    padding: 15px 10px;
+    // padding: 15px 10px;
     background: var($primary);
     border: none;
     border-radius: 0;
