--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,7 +1,7 @@
 // Body
 $body-bg: #feffff;
 $primary:#47748b;
-$secondary:#47748b;
+$secondary:#feffff;
 
 // Typography
 $font-family-sans-serif: 'Nunito',
