--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,4 +8,5 @@
 @import "../../node_modules/bootstrap/scss/bootstrap";
 @import 'drawer/drawer';
 @import 'client_home_page/home_page';
+@import 'card/card';
 
