--- a/resources/sass/client_home_page/_home_page.scss
+++ b/resources/sass/client_home_page/_home_page.scss
@@ -1,7 +1,9 @@
-#client-home{ 
-    width: 15rem;
-    margin:10px;
+.home-page{ 
+    width: 100%;
+    margin-left:15px;
+    margin-right:15px;
     border-radius: 2%;
+    
 
     &:hover {
         transition: all 0.3s ease-out;
@@ -11,10 +13,4 @@
         cursor: pointer;
       }
 
-//   .card-body{
-//     &:hover { 
-//         background: linear-gradient(to top, green 4px, transparent 0); 
-//         cursor: pointer;
-//       } 
-//   }
 }
