--- a/public/css/app.css
+++ b/public/css/app.css
@@ -31,7 +31,7 @@
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
   --bs-primary: #47748b;
-  --bs-secondary: #6c757d;
+  --bs-secondary: #feffff;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
   --bs-warning: #ffc107;
@@ -39,7 +39,7 @@
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
   --bs-primary-rgb: 71, 116, 139;
-  --bs-secondary-rgb: 108, 117, 125;
+  --bs-secondary-rgb: 254, 255, 255;
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
   --bs-warning-rgb: 255, 193, 7;
@@ -1814,15 +1814,15 @@ progress {
 }
 
 .table-secondary {
-  --bs-table-bg: #e2e3e5;
-  --bs-table-striped-bg: #d7d8da;
+  --bs-table-bg: white;
+  --bs-table-striped-bg: #f2f2f2;
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #cbccce;
+  --bs-table-active-bg: #e6e6e6;
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #d1d2d4;
+  --bs-table-hover-bg: #ececec;
   --bs-table-hover-color: #000;
   color: #000;
-  border-color: #cbccce;
+  border-color: #e6e6e6;
 }
 
 .table-success {
@@ -2836,33 +2836,33 @@ textarea.form-control-lg {
 }
 
 .btn-secondary {
-  color: #fff;
-  background-color: #6c757d;
-  border-color: #6c757d;
+  color: #000;
+  background-color: #feffff;
+  border-color: #feffff;
 }
 .btn-secondary:hover {
-  color: #fff;
-  background-color: #5c636a;
-  border-color: #565e64;
+  color: #000;
+  background-color: #feffff;
+  border-color: #feffff;
 }
 .btn-check:focus + .btn-secondary, .btn-secondary:focus {
-  color: #fff;
-  background-color: #5c636a;
-  border-color: #565e64;
-  box-shadow: 0 0 0 0.25rem rgba(130, 138, 145, 0.5);
+  color: #000;
+  background-color: #feffff;
+  border-color: #feffff;
+  box-shadow: 0 0 0 0.25rem rgba(216, 217, 217, 0.5);
 }
 .btn-check:checked + .btn-secondary, .btn-check:active + .btn-secondary, .btn-secondary:active, .btn-secondary.active, .show > .btn-secondary.dropdown-toggle {
-  color: #fff;
-  background-color: #565e64;
-  border-color: #51585e;
+  color: #000;
+  background-color: #feffff;
+  border-color: #feffff;
 }
 .btn-check:checked + .btn-secondary:focus, .btn-check:active + .btn-secondary:focus, .btn-secondary:active:focus, .btn-secondary.active:focus, .show > .btn-secondary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.25rem rgba(130, 138, 145, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(216, 217, 217, 0.5);
 }
 .btn-secondary:disabled, .btn-secondary.disabled {
-  color: #fff;
-  background-color: #6c757d;
-  border-color: #6c757d;
+  color: #000;
+  background-color: #feffff;
+  border-color: #feffff;
 }
 
 .btn-success {
@@ -3071,27 +3071,27 @@ textarea.form-control-lg {
 }
 
 .btn-outline-secondary {
-  color: #6c757d;
-  border-color: #6c757d;
+  color: #feffff;
+  border-color: #feffff;
 }
 .btn-outline-secondary:hover {
-  color: #fff;
-  background-color: #6c757d;
-  border-color: #6c757d;
+  color: #000;
+  background-color: #feffff;
+  border-color: #feffff;
 }
 .btn-check:focus + .btn-outline-secondary, .btn-outline-secondary:focus {
-  box-shadow: 0 0 0 0.25rem rgba(108, 117, 125, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(254, 255, 255, 0.5);
 }
 .btn-check:checked + .btn-outline-secondary, .btn-check:active + .btn-outline-secondary, .btn-outline-secondary:active, .btn-outline-secondary.active, .btn-outline-secondary.dropdown-toggle.show {
-  color: #fff;
-  background-color: #6c757d;
-  border-color: #6c757d;
+  color: #000;
+  background-color: #feffff;
+  border-color: #feffff;
 }
 .btn-check:checked + .btn-outline-secondary:focus, .btn-check:active + .btn-outline-secondary:focus, .btn-outline-secondary:active:focus, .btn-outline-secondary.active:focus, .btn-outline-secondary.dropdown-toggle.show:focus {
-  box-shadow: 0 0 0 0.25rem rgba(108, 117, 125, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(254, 255, 255, 0.5);
 }
 .btn-outline-secondary:disabled, .btn-outline-secondary.disabled {
-  color: #6c757d;
+  color: #feffff;
   background-color: transparent;
 }
 
@@ -4717,12 +4717,12 @@ textarea.form-control-lg {
 }
 
 .alert-secondary {
-  color: #41464b;
-  background-color: #e2e3e5;
-  border-color: #d3d6d8;
+  color: #666666;
+  background-color: white;
+  border-color: white;
 }
 .alert-secondary .alert-link {
-  color: #34383c;
+  color: #525252;
 }
 
 .alert-success {
@@ -5069,17 +5069,17 @@ textarea.form-control-lg {
 }
 
 .list-group-item-secondary {
-  color: #41464b;
-  background-color: #e2e3e5;
+  color: #666666;
+  background-color: white;
 }
 .list-group-item-secondary.list-group-item-action:hover, .list-group-item-secondary.list-group-item-action:focus {
-  color: #41464b;
-  background-color: #cbccce;
+  color: #666666;
+  background-color: #e6e6e6;
 }
 .list-group-item-secondary.list-group-item-action.active {
   color: #fff;
-  background-color: #41464b;
-  border-color: #41464b;
+  background-color: #666666;
+  border-color: #666666;
 }
 
 .list-group-item-success {
@@ -6213,10 +6213,10 @@ textarea.form-control-lg {
 }
 
 .link-secondary {
-  color: #6c757d;
+  color: #feffff;
 }
 .link-secondary:hover, .link-secondary:focus {
-  color: #565e64;
+  color: #feffff;
 }
 
 .link-success {
@@ -6663,7 +6663,7 @@ textarea.form-control-lg {
 }
 
 .border-secondary {
-  border-color: #6c757d !important;
+  border-color: #feffff !important;
 }
 
 .border-success {
@@ -10276,7 +10276,7 @@ textarea.form-control-lg {
     DEMO STYLE
 */
 body {
-  color: #999;
+  color: #47748b;
 }
 
 p {
@@ -10296,11 +10296,13 @@ a:focus {
 
 .navbar {
   padding: 15px 10px;
-  background: var(#47748b);
+  background: #47748b;
   border: none;
   border-radius: 0;
   margin-bottom: 40px;
+  margin-top: 10px;
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+  height: 70px;
 }
 
 .navbar-btn {
@@ -10441,15 +10443,36 @@ a.download {
   overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
 }
 
-#client-home {
+.home-page {
+  width: 100%;
+  margin-left: 15px;
+  margin-right: 15px;
+  border-radius: 2%;
+}
+.home-page:hover {
+  transition: all 0.3s ease-out;
+  background: #47748b;
+  background-color: #feffff;
+  color: #47748b;
+  cursor: pointer;
+}
+
+.client-home {
   width: 15rem;
   margin: 10px;
   border-radius: 2%;
+  outline-color: #47748b;
+  color: #47748b;
+  border-radius: 10px;
 }
-#client-home:hover {
+.client-home img {
+  padding: 1rem;
+}
+.client-home:hover {
   transition: all 0.3s ease-out;
   background: #47748b;
-  background-color: #6c757d;
-  color: #47748b;
+  color: #feffff;
   cursor: pointer;
+  transform: scale(1.06);
+  transition: all 0.3s ease-out;
 }
